# Bike_computer

./: .gitignore  CMakeLists.txt  readme.md
cmake/: credentials.cmake  credentials.cmake.example
include/: hallsensor.h  logging.h  mpu6050.h  oled.h  ssi.h  states.h  stopwatch.h
src/: CMakeLists.txt  hallsensor.c  logging.c  main.c  mpu6050.c  oled.c  ssi.c  stopwatch.c
src/fs/: index.shtml
